--- a/hw_3/index.html
+++ b/hw_3/index.html
@@ -12,23 +12,25 @@
 <body>
     <div class="top">
         <div class="header">
-            <div class="header__logo">
-                <div class="header__img">
-                    <img src="img/header_logo.svg" alt="logo">
+            <div class="header__inner">
+                <div class="header__logo">
+                    <div class="header__img">
+                        <img src="img/header_logo.svg" alt="logo">
+                    </div>
+                    <div class="header__name">Grow<span class="header__name__colour">Be</span></div>
                 </div>
-                <div class="header__name">Grow<span class="header__name__colour">Be</span></div>
-            </div>
-            <div class="header__nav">
-                <ul class="nav">
-                    <li><a href="#" class="main__nav__link">Home</a></li>
-                    <li style="width: 64px;"><a href="#" class="nav__link">About Us</a></li>
-                    <li><a href="#" class="nav__link">Services</a></li>
-                    <li><a href="#" class="nav__link">Features</a></li>
-                    <li><a href="#" class="nav__link">Team</a></li>
-                    <li><a href="#" class="nav__link">Blog</a></li>
-                    <li><a href="#" class="nav__link">Contact</a></li>
-                </ul>
-                <img src="img/nav_icon.svg" alt="nav icon" class="nav__icon">
+                <div class="header__nav">
+                    <ul class="nav">
+                        <li><a href="#" class="main__nav__link">Home</a></li>
+                        <li style="width: 64px;"><a href="#" class="nav__link">About Us</a></li>
+                        <li><a href="#" class="nav__link">Services</a></li>
+                        <li><a href="#" class="nav__link">Features</a></li>
+                        <li><a href="#" class="nav__link">Team</a></li>
+                        <li><a href="#" class="nav__link">Blog</a></li>
+                        <li><a href="#" class="nav__link">Contact</a></li>
+                    </ul>
+                    <img src="img/nav_icon.svg" alt="nav icon" class="nav__icon">
+                </div>
             </div>
         </div>
         <div class="top__content">
