--- a/hw_5/index.html
+++ b/hw_5/index.html
@@ -36,7 +36,7 @@
             <div class="content">
                 <section class="description">
                     <div class="description__img">
-                        <img src="img/e557ec4d2a67db0f9c797192791eecd6.png" alt="" width="800px" height="764px">
+                        <img src="img/e557ec4d2a67db0f9c797192791eecd6.png" alt="" class="descr__img">
                     </div>
                     <div class="description__text">
                         <div class="rect"></div>
@@ -47,30 +47,32 @@
                     </div>
                 </section>
                 <section class="products">
-                    <div class="products__little__one">
-                        <div class="product__text">
-                            <h3 class="prod__text">30% OFF</h3>
-                            <h3 class="prod__span">FOR WOMEN</h3>
+                    <div class="prod__items">
+                        <div class="products__little__one">
+                            <div class="product__text">
+                                <h3 class="prod__text">30% OFF</h3>
+                                <h3 class="prod__span">FOR WOMEN</h3>
+                            </div>
                         </div>
-                    </div>
-                    <div class="products__little__two">
-                        <div class="product__text">
-                            <h3 class="prod__text">HOT DEAL</h3>
-                            <h3 class="prod__span">FOR MEN</h3>
+                        <div class="products__little__two">
+                            <div class="product__text">
+                                <h3 class="prod__text">HOT DEAL</h3>
+                                <h3 class="prod__span">FOR MEN</h3>
+                            </div>
                         </div>
-                    </div>
-                    <div class="products__little__three">
-                        <div class="product__text">
-                            <h3 class="prod__text">NEW ARRIVALS</h3>
-                            <h3 class="prod__span">FOR KIDS</h3>
+                        <div class="products__little__three">
+                            <div class="product__text">
+                                <h3 class="prod__text">NEW ARRIVALS</h3>
+                                <h3 class="prod__span">FOR KIDS</h3>
+                            </div>
                         </div>
-                    </div>
-                    <div class="products__big">
-                        <div class="product__text">
-                            <h3 class="prod__text">LUXIROUS & TRENDY</h3>
-                            <h3 class="prod__span">ACCESORIES</h3>
+                        <div class="products__big">
+                            <div class="product__text">
+                                <h3 class="prod__text">LUXIROUS & TRENDY</h3>
+                                <h3 class="prod__span">ACCESORIES</h3>
+                            </div>
                         </div>
-                    </div>
+                    </div>                    
                 </section>
                 <section class="featured__items">
                     <div class="featured__items__text">
@@ -78,79 +80,89 @@
                         <h3 class="featured__items__subtitle">Shop for items based on what we featured in this week</h3>
                     </div>
                     <div class="items">
-                        <div class="item">
-                            <div class="item__img">
-                                <img src="img/item_1.png" alt="">
+                        <div class="items__wrap">
+                            <div class="item">
+                                <div class="item__img">
+                                    <img src="img/item_1.png" alt="" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="item__description">
-                                <div class="item__desc__info">
-                                    <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
-                                    <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
-                                    <h3 class="item__price">$52.00</h3>
+                            <div class="item">
+                                <div class="item__img__2">
+                                    <div class="temp">
+                                        <img src="img/item_2.png" alt="" class="img__hover__2">
+                                    </div>
+                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>                            
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">                                
+                                    <img src="img/item_3.png" alt="" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">
+                                    <img src="img/item_4.png" alt="" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>                                
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">                                
+                                    <img src="img/item_5.png" alt="" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">
+                                    <img src="img/item_6.png" alt="" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>                                
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="item">
-                            <div class="item__img__2">
-                                <img src="img/item_2.png" alt="">
-                            </div>
-                            <div class="item__description">
-                                <div class="item__desc__info">
-                                    <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
-                                    <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
-                                    <h3 class="item__price">$52.00</h3>
-                                </div>
-                            </div>
                         </div>
-                        <div class="item">
-                            <div class="item__img">
-                                <img src="img/item_3.png" alt="">
-                            </div>
-                            <div class="item__description">
-                                <div class="item__desc__info">
-                                    <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
-                                    <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
-                                    <h3 class="item__price">$52.00</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item__img">
-                                <img src="img/item_4.png" alt="">
-                            </div>
-                            <div class="item__description">
-                                <div class="item__desc__info">
-                                    <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
-                                    <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
-                                    <h3 class="item__price">$52.00</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item__img">
-                                <img src="img/item_5.png" alt="">
-                            </div>
-                            <div class="item__description">
-                                <div class="item__desc__info">
-                                    <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
-                                    <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
-                                    <h3 class="item__price">$52.00</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item__img">
-                                <img src="img/item_6.png" alt="">
-                            </div>
-                            <div class="item__description">
-                                <div class="item__desc__info">
-                                    <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
-                                    <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
-                                    <h3 class="item__price">$52.00</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="items__button">
                         <button class="button">Browse All Product</button>
                     </div>
