feat: add hw_5 files

--- a/hw_5/index.html
+++ b/hw_5/index.html
@@ -24,8 +24,8 @@
                 <div class="header__nav">
                     <ul class="nav">
                         <li><a href="#"><img src="img/Forma 2.svg" alt=""></a></li>
-                        <li><a href="#"><img src="img/Forma 3.svg" alt=""></a></li>
-                        <li><a href="#"><img src="img/Forma 4.svg" alt=""></a></li>
+                        <li class="login"><a href="#"><img src="img/Forma 3.svg" alt=""></a></li>
+                        <li class="basket"><a href="#"><img src="img/Forma 4.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>            
