--- a/hw_5/index.html
+++ b/hw_5/index.html
@@ -15,17 +15,17 @@
             <div class="header__inner">
                 <div class="header__logo">
                     <div class="header__img">
-                        <a href="#"><img src="img/Group 2.svg" alt="logo"></a>
+                        <a href="#"><img src="img/Group_2.svg" alt="logo"></a>
                     </div>
                     <div class="header__search">
-                        <a href="#"><img src="img/Forma 1.svg" alt="search" class="search"></a>
+                        <a href="#"><img src="img/Forma_1.svg" alt="search" class="search"></a>
                     </div>
                 </div>
                 <div class="header__nav">
                     <ul class="nav">
-                        <li class="mob_menu"><label for="nav__toggle"><img src="img/Forma 2.svg" alt="" class="menu"></label></li>
-                        <li class="login"><a href="#"><img src="img/Forma 3.svg" alt=""></a></li>
-                        <li class="basket"><a href="#"><img src="img/Forma 4.svg" alt=""></a></li>
+                        <li class="mob_menu"><label for="nav__toggle"><img src="img/Forma_2.svg" alt="menu" class="menu"></label></li>
+                        <li class="login"><a href="#"><img src="img/Forma_3.svg" alt="login"></a></li>
+                        <li class="basket"><a href="#"><img src="img/Forma_4.svg" alt="basket"></a></li>
                     </ul>
                 </div>
                 <input type="checkbox" id="nav__toggle" hidden>
@@ -74,7 +74,7 @@
             <div class="content">
                 <section class="description">
                     <div class="description__img">
-                        <img src="img/e557ec4d2a67db0f9c797192791eecd6.png" alt="" class="descr__img">
+                        <img src="img/e557ec4d2a67db0f9c797192791eecd6.png" alt="man" class="descr__img">
                     </div>
                     <div class="description__text">
                         <div class="rect"></div>
@@ -121,8 +121,8 @@
                         <div class="items__wrap">
                             <div class="item">
                                 <div class="item__img">
-                                    <img src="img/item_1.png" alt="" class="img__hover">
-                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>
+                                    <img src="img/item_1.png" alt="man" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>
                                 </div>
                                 <div class="item__description">
                                     <div class="item__desc__info">
@@ -135,9 +135,9 @@
                             <div class="item">
                                 <div class="item__img__2">
                                     <div class="temp">
-                                        <img src="img/item_2.png" alt="" class="img__hover__2">
+                                        <img src="img/item_2.png" alt="woman" class="img__hover__2">
                                     </div>
-                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>                            
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                            
                                 </div>
                                 <div class="item__description">
                                     <div class="item__desc__info">
@@ -149,8 +149,8 @@
                             </div>
                             <div class="item">
                                 <div class="item__img">                                
-                                    <img src="img/item_3.png" alt="" class="img__hover">
-                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>
+                                    <img src="img/item_3.png" alt="man" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>
                                 </div>
                                 <div class="item__description">
                                     <div class="item__desc__info">
@@ -162,8 +162,8 @@
                             </div>
                             <div class="item">
                                 <div class="item__img">
-                                    <img src="img/item_4.png" alt="" class="img__hover">
-                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>                                
+                                    <img src="img/item_4.png" alt="man" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                                
                                 </div>
                                 <div class="item__description">
                                     <div class="item__desc__info">
@@ -175,8 +175,8 @@
                             </div>
                             <div class="item">
                                 <div class="item__img">                                
-                                    <img src="img/item_5.png" alt="" class="img__hover">
-                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>
+                                    <img src="img/item_5.png" alt="woman" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>
                                 </div>
                                 <div class="item__description">
                                     <div class="item__desc__info">
@@ -188,8 +188,8 @@
                             </div>
                             <div class="item">
                                 <div class="item__img">
-                                    <img src="img/item_6.png" alt="" class="img__hover">
-                                    <button class="hov__button"><img src="img/Forma 1 copy.svg">Add to Cart</button>                                
+                                    <img src="img/item_6.png" alt="woman" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                                
                                 </div>
                                 <div class="item__description">
                                     <div class="item__desc__info">
@@ -208,17 +208,17 @@
                 <section class="features">
                     <div class="features__items">
                         <div class="feature">
-                            <img src="img/car.svg" alt="" height="40px" class="feature__img">
+                            <img src="img/car.svg" alt="car" height="40" class="feature__img">
                             <h2 class="features__title">Free Delivery</h2>
                             <h3 class="features__subtitle">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
                         </div>
                         <div class="feature">
-                            <img src="img/percent.svg" alt="" class="feature__img">
+                            <img src="img/percent.svg" alt="percent" class="feature__img">
                             <h2 class="features__title">Sales & discounts</h2>
                             <h3 class="features__subtitle">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>                        
                         </div>
                         <div class="feature">
-                            <img src="img/crown.svg" alt="" height="40px" class="feature__img">
+                            <img src="img/crown.svg" alt="crown" height="40" class="feature__img">
                             <h2 class="features__title">Quality assurance</h2>
                             <h3 class="features__subtitle">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
                         </div>
@@ -226,10 +226,10 @@
                 </section>
                 <section class="reviews">
                     <div class="reviews__items">
-                        <img src="img/rev_back.png" alt="" class="rev__back">
+                        <img src="img/rev_back.png" alt="background" class="rev__back">
                         <div class="rev__item">
                             <div class="feedback">
-                                <img src="img/Intersect.png" alt="" class="user__photo">
+                                <img src="img/Intersect.png" alt="user__photo" class="user__photo">
                                 <h2 class="feedback__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span class="text__ital">a pulvinar purus condimentum“</span></h2>
                             </div>
                             <div class="subscribe">
