feat: add hw_8 files

--- a/hw_8/index.html
+++ b/hw_8/index.html
@@ -81,7 +81,7 @@
                         <div class="filter__item">
                             <details class="filter">
                                 <summary class="filter__summary">
-                                    FILTER
+                                    <span class="filter__title">FILTER</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="10" viewBox="0 0 15 10" fill="none">
                                         <path d="M0.833333 10H4.16667C4.625 10 5 9.625 5 9.16667C5 8.70833 4.625 8.33333 4.16667 8.33333H0.833333C0.375 8.33333 0 8.70833 0 9.16667C0 9.625 0.375 10 0.833333 10ZM0 0.833333C0 1.29167 0.375 1.66667 0.833333 1.66667H14.1667C14.625 1.66667 15 1.29167 15 0.833333C15 0.375 14.625 0 14.1667 0H0.833333C0.375 0 0 0.375 0 0.833333ZM0.833333 5.83333H9.16667C9.625 5.83333 10 5.45833 10 5C10 4.54167 9.625 4.16667 9.16667 4.16667H0.833333C0.375 4.16667 0 4.54167 0 5C0 5.45833 0.375 5.83333 0.833333 5.83333Z" fill="black"/>
                                     </svg>
@@ -175,6 +175,47 @@
                         <div class="items__wrap">
                             <div class="item">
                                 <div class="item__img">
+                                    <img src="img/item_1.png" alt="man" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img__2">
+                                    <div class="temp">
+                                        <img src="img/item_2.png" alt="woman" class="img__hover__2">
+                                    </div>
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                            
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">                                
+                                    <img src="img/item_3.png" alt="man" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">
                                     <img src="img/item_4.png" alt="man" class="img__hover">
                                     <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                                
                                 </div>
@@ -202,6 +243,45 @@
                             <div class="item">
                                 <div class="item__img">
                                     <img src="img/item_6.png" alt="woman" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                                
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">
+                                    <img src="img/item_7.png" alt="man" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                                
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">                                
+                                    <img src="img/item_8.png" alt="man" class="img__hover">
+                                    <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>
+                                </div>
+                                <div class="item__description">
+                                    <div class="item__desc__info">
+                                        <h3 class="item__title">ELLERY X M'O CAPSULE</h3>
+                                        <h3 class="item__subtitle">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</h3>
+                                        <h3 class="item__price">$52.00</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="item__img">
+                                    <img src="img/item_9.png" alt="man" class="img__hover">
                                     <button class="hov__button"><img src="img/Forma_1_copy.svg" alt="basket">Add to Cart</button>                                
                                 </div>
                                 <div class="item__description">
