feat: add hw_8 files

--- a/hw_8/index.html
+++ b/hw_8/index.html
@@ -295,6 +295,47 @@
                         </div>
                         </div>
                 </section>
+                <section class="pagination__section">
+                    <div class="pagination">
+                        <ul class="page">
+                            <li class="page__btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="9" height="14" viewBox="0 0 9 14" fill="none">
+                                    <path d="M8.995 2L3.995 7L8.995 12L7.995 14L0.994995 7L7.995 0L8.995 2Z" fill="black"/>
+                                </svg>
+                            </li>
+                            <li class="page__number"><a href="#">1</a></li>
+                            <li class="page__number"><a href="#">2</a></li>
+                            <li class="page__number"><a href="#">3</a></li>
+                            <li class="page__number"><a href="#">4</a></li>
+                            <li class="page__number"><a href="#">5</a></li>
+                            <li class="page__number"><a href="#">6</a>.....<a href="#">20</a></li>
+                            <li class="page__btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="9" height="14" viewBox="0 0 9 14" fill="none">
+                                    <path d="M0.994995 12L5.995 7L0.994995 2L1.995 0L8.995 7L1.995 14L0.994995 12Z" fill="black"/>
+                                </svg>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="features">
+                    <div class="features__items">
+                        <div class="feature">
+                            <img src="img/car.svg" alt="car" height="40" class="feature__img">
+                            <h2 class="features__title">Free Delivery</h2>
+                            <h3 class="features__subtitle">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
+                        </div>
+                        <div class="feature">
+                            <img src="img/percent.svg" alt="percent" class="feature__img">
+                            <h2 class="features__title">Sales & discounts</h2>
+                            <h3 class="features__subtitle">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>                        
+                        </div>
+                        <div class="feature">
+                            <img src="img/crown.svg" alt="crown" height="40" class="feature__img">
+                            <h2 class="features__title">Quality assurance</h2>
+                            <h3 class="features__subtitle">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</h3>
+                        </div>
+                    </div>
+                </section>  
                 <section class="reviews">
                     <div class="reviews__items">
                         <img src="img/rev_back.png" alt="background" class="rev__back">
@@ -321,7 +362,7 @@
                             </div>
                         </div>
                     </div>
-                </section>                
+                </section>              
             </div>
         </div>
     </main>
