feat: add hw_9 files

--- a/hw_9/index.html
+++ b/hw_9/index.html
@@ -119,9 +119,9 @@
                             <form action="" method="get">
                                 <label>
                                     <h2>SHIPPING ADRESS</h2>
-                                    <input class="input__first" type="text" placeholder="Bangladesh">
-                                    <input type="text" placeholder="State">
-                                    <input type="number" placeholder="Postcode / Zip">
+                                    <input class="input__first" type="text" placeholder="Bangladesh" required>
+                                    <input type="text" placeholder="State" required>
+                                    <input type="number" placeholder="Postcode / Zip" required>
                                 </label>
                                 <button>GET A QUOTE</button>
                             </form>
