feat: add hw_10 files

--- a/hw_10/index.html
+++ b/hw_10/index.html
@@ -93,6 +93,10 @@
                                         <input type="radio" name="radio"  class="radio">
                                         <span>Female</span>
                                     </label>
+                                    <label class="radiobtn">
+                                        <input type="radio" name="radio"  class="radio">
+                                        <span>Other</span>
+                                    </label>
                                 </fieldset>
                                 <label  class="mail">
                                     <h2>Login details</h2>
