--- a/hw_9/index.html
+++ b/hw_9/index.html
@@ -111,8 +111,8 @@
                                 </div>                                    
                             </div>
                             <div class="description__cart__products-buttons">
-                                <button>CLEAR SHOPPING CART</button>
-                                <button>CONTINUE SHOPPING</button>
+                                <button>clear shopping cart</button>
+                                <button>continue shopping</button>
                             </div>
                         </div>  
                         <div class="description__cart__purchase">
@@ -123,7 +123,7 @@
                                     <input type="text" placeholder="State" required>
                                     <input type="number" placeholder="Postcode / Zip" required>
                                 </label>
-                                <button>GET A QUOTE</button>
+                                <button>get a quote</button>
                             </form>
                             <div class="description__cart__purchase-payment">
                                 <h3>SUB TOTAL</h3>
