feat: add hw_10 files

--- a/hw_10/index.html
+++ b/hw_10/index.html
@@ -118,7 +118,7 @@
                             <h3>Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as soon as you join:</h3>
                             <div class="marketing">
                                 <h3>15% off welcome offer</h3>
-                                <h3>Free shipping, returns and exchanges on all orders</h3>
+                                <h3><span>Free shipping, returns and exchanges on all orders</span></h3>
                                 <h3>$10 off a purchase on your birthday</h3>
                                 <h3>Early access to products</h3>
                                 <h3>Exclusive offers & rewards</h3>
