feat: add hw_8 files

--- a/hw_8/index.html
+++ b/hw_8/index.html
@@ -138,20 +138,20 @@
                                     </svg>
                                 </summary>
                                 <div class="sort__item__category">
-                                    <label for="" class="sort__label">
-                                        <input type="checkbox" name="" id="">
+                                    <label class="sort__label">
+                                        <input type="checkbox">
                                         XS
                                     </label>
-                                    <label for="" class="sort__label">
-                                        <input type="checkbox" name="" id="">
+                                    <label class="sort__label">
+                                        <input type="checkbox">
                                         S
                                     </label>
-                                    <label for="" class="sort__label">
-                                        <input type="checkbox" name="" id="">
+                                    <label class="sort__label">
+                                        <input type="checkbox">
                                         M
                                     </label>
-                                    <label for="" class="sort__label">
-                                        <input type="checkbox" name="" id="">
+                                    <label class="sort__label">
+                                        <input type="checkbox">
                                         L
                                     </label>
                                 </div>
