--- a/finish/hw_9/index.html
+++ b/finish/hw_9/index.html
@@ -116,15 +116,23 @@
                             </div>
                         </div>  
                         <div class="description__cart__purchase">
-                            <form action="" method="get">
-                                <label>
-                                    <h2>SHIPPING ADRESS</h2>
-                                    <input class="input__first" type="text" placeholder="Bangladesh" required>
-                                    <input type="text" placeholder="State" required>
-                                    <input type="number" placeholder="Postcode / Zip" required>
-                                </label>
-                                <button>get a quote</button>
-                            </form>
+                            <div class="get">
+                                <form id="quote__button" method="get">
+                                    <label>
+                                        SHIPPING ADRESS
+                                    </label>
+                                    <label>
+                                        <input class="input__first" type="text" placeholder="Bangladesh" required>
+                                    </label>
+                                    <label>
+                                        <input type="text" placeholder="State" required>
+                                    </label>
+                                    <label>
+                                        <input type="number" placeholder="Postcode / Zip" required>
+                                    </label>                                    
+                                </form>
+                                <button form="quote__button">get a quote</button>
+                            </div>
                             <div class="description__cart__purchase-payment">
                                 <h3>SUB TOTAL</h3>
                                 <h2>GRAND TOTAL</h2>
